--- a/docs/integrations/a11y.md
+++ b/docs/integrations/a11y.md
@@ -4,7 +4,7 @@ title: a11y Integration (beta)
 
 # A11y Integration (beta)
 
-Lint your token schema for a11y errors. Can check your color + typography tokens for contrast. [Suggestions welcome](https://github.com/drwpow/cobalt-ui/issues) on other checks it could run!
+Lint your token schema for a11y errors. Can check your color + typography tokens for contrast.
 
 Install the plugin:
 
