--- a/docs/integrations/a11y.md
+++ b/docs/integrations/a11y.md
@@ -69,15 +69,15 @@ export default {
 
 Within each check group, specify:
 
-| Name                |              Type              | Description                                                                                                                             |
-| :------------------ | :----------------------------: | :-------------------------------------------------------------------------------------------------------------------------------------- |
-| `tokens`            |            `object`            | A group of tokens to test together.                                                                                                     |
-| `tokens.foreground` |            `string`            | The ID of the foreground color.                                                                                                         |
-| `tokens.background` |            `string`            | The ID of the background color.                                                                                                         |
-| `tokens.typography` |            `string`            | (optional) The ID of a typography stack                                                                                                 |
-| `tokens.modes`      |           `string[]`           | (optional) Any modes you’d like to test                                                                                                 |
-| `wcag2`             |  `string \| number \| false`   | Specify `'AA'` or `'AAA'` compliance (or a minimum contrast), or `false` to disable (default: `'AA'`). See [WCAG 2](#wcag-2)            |
-| `apca`              | `boolean \| 'body' \| number ` | Specify `true`/`false` to enable, or a Lc Contrast number, or `'body'` to enforce body text mode (default: `false`). See [APCA](#apca). |
+| Name                |                      Type                      | Description                                                                                                                  |
+| :------------------ | :--------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------- |
+| `tokens`            |                    `object`                    | A group of tokens to test together.                                                                                          |
+| `tokens.foreground` |                    `string`                    | The ID of the foreground color.                                                                                              |
+| `tokens.background` |                    `string`                    | The ID of the background color.                                                                                              |
+| `tokens.typography` |                    `string`                    | (optional) The ID of a typography stack                                                                                      |
+| `tokens.modes`      |                   `string[]`                   | (optional) Any modes you’d like to test                                                                                      |
+| `wcag2`             |          `string \| number \| false`           | Specify `'AA'` or `'AAA'` compliance (or a minimum contrast), or `false` to disable (default: `'AA'`). See [WCAG 2](#wcag-2) |
+| `apca`              | `'bronze' \| 'bronze-body' \| number \| false` | Enable with `'bronze'` or `'bronze-body'`, or a specific Lc `number` (default: `false`). See [APCA](#apca).                  |
 
 #### WCAG 2
 
@@ -105,6 +105,15 @@ APCA is still a draft, and not part of WCAG 3. But APCA _is_ [well-researched](h
 
 The [APCA contrast algorithm](https://www.myndex.com/APCA/) is still in beta, but is a likely candidate for the upcoming WCAG 3 contrast algorithm. APCA uses the [latest research in color science](https://git.apcacontrast.com/documentation/WhyAPCA) and implements more perceptual contrast ratios that yield more accurate results. But it can be tricky to understand.
 
+| Setting         | Description                                                                      |
+| :-------------- | :------------------------------------------------------------------------------- |
+| `'bronze'`      | Enforce [Bronze](https://www.myndex.com/APCA/#Bronze)-level conformance.         |
+| `'bronze-body'` | Enforce Bronze-level compliance for body text (must hit `15 Lc` higher contrast) |
+| `number`        | ⚠️ Advanced users: specify Lc Contrast (which will differ based on typography).  |
+| `false`         | Disable APCA.                                                                    |
+
+##### Guide
+
 The recommended setting is first starting with `'bronze'` enforcement (somewhat-equivalent to `'AA'` in WCAG 2):
 
 ```js
@@ -113,26 +122,41 @@ The recommended setting is first starting with `'bronze'` enforcement (somewhat-
 }
 ```
 
-Then, after running a check, you’ll either **pass** or **fail.** If you fail, the error message will show you by _how much_ you were off (e.g. `Expected 75, received`). You then have 3 courses of action:
+Then, after running a check, you’ll either **pass** or **fail.** If you fail, the error message will show you by _how much_ you were off (e.g. `Expected 75, received 70`). You then have 3 courses of action:
 
 1. **Increase contrast.** Simply adjust the color to a higher contrast, or adjust the font size / font weight.
-2. **Accept the current level.** If you feel like Cobalt calculated your contrast wrong (explained below), you can change `apca` to the Lc number (e.g. `apca: 60`).
+2. **Accept the current level.** If you feel like Cobalt calculated your contrast wrong (see [FAQs](#faq)), you can change `apca` to a passing Lc number (e.g. `apca: 59`).
 3. **Disable APCA for this check**. Perhaps this particular color combination, or typography stack, isn’t performing well under the APCA working draft. Simply set `apca: false` to skip this check.
 
-| Setting         | Description                                                                      |
-| :-------------- | :------------------------------------------------------------------------------- |
-| `'bronze'`      | Enforce [Bronze](https://www.myndex.com/APCA/#Bronze)-level conformance.         |
-| `'bronze-body'` | Enforce Bronze-level compliance for body text (must hit `15 Lc` higher contrast) |
-| `number`        | ⚠️ Advanced users: specify Lc Contrast (which will differ based on typography).  |
-| `false`         | Disable APCA.                                                                    |
+##### FAQ
 
-::: info
+::: details Can I test APCA without typography?
 
-APCA calculated its contrast tables off of Helvetica, which you probably aren’t using. So it allows some wiggle room with different typefaces (some typefaces just render _bolder_ than others, or have a higher x-height, and therefore naturally have higher contrast). While any designer knows this is true, it introduces even more complexity to what’s supposed to be a mathematical check.
-
-Cobalt uses official APCA metrics, but if after [reading the guide](https://www.myndex.com/APCA/) you are confident you have enough contrast with your color + typography combo as-is, you can lock in the current Lc contrast by specifying it manually.
+Yes! Just omit the `typography` token.
 
 :::
+
+::: details I’m failing contrast, but I can’t change my colors, font size, or font weight. What do I do?
+
+APCA’s typography tables are based off **Helvetica.** Most people aren’t using Helvetica as their brand font, so APCA allows some wiggle room in interpreting your _actual_ contrast numbers (see [Notes on Font Size & Weight](https://www.myndex.com/APCA/)). Read the guide and see if your _actual_ Lc contrast numbers are different than what Cobalt is reporting, and adjust by-hand (`apca: 59`).
+
+:::
+
+::: details What’s the difference between `'bronze'` and `'bronze-body'`?
+
+The [APCA Guide](https://www.myndex.com/APCA/) has stricter contrast requirements on body text because it’s your most frequently-occurring type style. However, to give designers control over the design itself, there’s no hard numbers on what constitutes a “body” type style. So you’ll have to tell Cobalt “this is my body text” with `'bronze-body'`.
+
+:::
+
+::: details Can I test with Silver or Gold?
+
+Not currently. The Silver guidelines are only half-defined, and Gold currently isn’t defined at all. If Bronze isn’t enough of a challenge for you, you can always specify manual Lc numbers (e.g. `apca: 90`)!
+
+:::
+
+#### Bridge PCA
+
+Coming Soon!
 
 ### Others
 
