Add bronze support

--- a/docs/integrations/a11y.md
+++ b/docs/integrations/a11y.md
@@ -16,12 +16,12 @@ Then add to your `tokens.config.js` file:
 
 ```js
 // tokens.config.js
-import a11y from '@cobalt-ui/lint-a11y';
+import a11y from "@cobalt-ui/lint-a11y";
 
 /** @type {import('@cobalt-ui/core').Config} */
 export default {
-  tokens: './tokens.json',
-  outDir: './tokens/',
+  tokens: "./tokens.json",
+  outDir: "./tokens/",
   plugins: [a11y()],
   lint: {
     // checks
@@ -34,27 +34,27 @@ export default {
 The contrast check asserts your token combinations the latest WCAG 2.1 and [APCA](https://www.myndex.com/APCA/) (WCAG 3 proposal) formulae. Add an array of `checks` to test:
 
 ```js
-import a11y from '@cobalt-ui/lint-a11y';
+import a11y from "@cobalt-ui/lint-a11y";
 
 /** @type {import('@cobalt-ui/core').Config} */
 export default {
-  tokens: './tokens.json',
-  outDir: './tokens/',
+  tokens: "./tokens.json",
+  outDir: "./tokens/",
   plugins: [a11y()],
   lint: {
     rules: {
-      'a11y/contrast': [
-        'error',
+      "a11y/contrast": [
+        "error",
         {
           checks: [
             {
               tokens: {
-                foreground: 'color.semantic.text',
-                background: 'color.semantic.bg',
-                typography: 'typography.body',
-                modes: ['light', 'dark'],
+                foreground: "color.semantic.text",
+                background: "color.semantic.bg",
+                typography: "typography.body",
+                modes: ["light", "dark"],
               },
-              wcag2: 'AAA',
+              wcag2: "AAA",
               apca: true,
             },
           ],
@@ -69,33 +69,66 @@ export default {
 
 Within each check group, specify:
 
-| Name                |                      Type                      | Description                                                                                                                  |
-| :------------------ | :--------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------- |
-| `tokens`            |                    `object`                    | A group of tokens to test together.                                                                                          |
-| `tokens.foreground` |                    `string`                    | The ID of the foreground color.                                                                                              |
-| `tokens.background` |                    `string`                    | The ID of the background color.                                                                                              |
-| `tokens.typography` |                    `string`                    | (optional) The ID of a typography stack                                                                                      |
-| `tokens.modes`      |                   `string[]`                   | (optional) Any modes you’d like to test                                                                                      |
-| `wcag2`             |          `string \| number \| false`           | Specify `'AA'` or `'AAA'` compliance (or a minimum contrast), or `false` to disable (default: `'AA'`). See [WCAG 2](#wcag-2) |
-| `apca`              | `'bronze' \| 'bronze-body' \| number \| false` | Enable with `'bronze'` or `'bronze-body'`, or a specific Lc `number` (default: `false`). See [APCA](#apca).                  |
+| Name                |                             Type                              | Description                                                                                                                  |
+| :------------------ | :-----------------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------- |
+| `tokens`            |                           `object`                            | A group of tokens to test together.                                                                                          |
+| `tokens.foreground` |                           `string`                            | The ID of the foreground color.                                                                                              |
+| `tokens.background` |                           `string`                            | The ID of the background color.                                                                                              |
+| `tokens.typography` |                           `string`                            | (optional) The ID of a typography stack                                                                                      |
+| `tokens.modes`      |                          `string[]`                           | (optional) Any modes you’d like to test                                                                                      |
+| `wcag2`             |                  `string \| number \| false`                  | Specify `"AA"` or `"AAA"` compliance (or a minimum contrast), or `false` to disable (default: `"AA"`). See [WCAG 2](#wcag-2) |
+| `apca`              | `"bronze" \| \| "silver" \| "silver-body" \| number \| false` | Enable with `"bronze"` or `"bronze-body"`, or a specific Lc `number` (default: `false`). See [APCA](#apca).                  |
 
 #### WCAG 2
 
 The [WCAG 2 contrast formula](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum) is represented by the `wcag2` setting and accepts either a string, number, or `false`:
 
-| Value                | Number Equivalent | Minimum Contrast |
-| :------------------- | ----------------: | :--------------- |
-| `'AA'` (default)     |             `4.5` | 4.5:1            |
-| `'AA'` (large text)  |               `3` | 3:1              |
-| `'AAA'`              |               `7` | 7:1              |
-| `'AAA'` (large text) |             `4.5` | 4.5:1            |
-| `false`              |               `0` | (any)            |
+```ts
+{
+  checks: [
+    {
+      tokens: { /* … */ },
+      wcag2: 'AA'; // "AAA" | "AA" | number | false
+    },
+  ],
+}
+```
 
-The WCAG 2 standard is the most common contrast standard, so `'AA'` level is enforced by default by this plugin.
+The WCAG 2 standard is the most common contrast standard, so `"AA"` level is enforced by default by this plugin.
 
-If you pass a `typography` token, it will take font size and weight into account (meaning for larger fonts, you don’t need as much color contrast). If no `typography` token is passed, it will assume default font size (16px, normal).
+Add a `typography` token value to automatically figure out if you’re using [large text](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum#dfn-large-scale) (which lowers the minimum contrast requirement).
 
 #### APCA
+
+The [APCA contrast algorithm](https://www.myndex.com/APCA/) is still in beta, but is a likely candidate for the upcoming WCAG 3 contrast algorithm. Like WCAG 2 there is a “contrast ratio” under-the-hood, but it’s referred to as **Lc Contrast**, representing _perceptual_ lightness. It’s a number ranging from `0` – `100`, and like WCAG 2 your target number depends on a few factors. The rough equivalence is:
+
+| Lc Contrast | WCAG 2 Contrast Ratio |
+| ----------: | :-------------------- |
+|        `90` | 7:1                   |
+|        `75` | 4.5:1                 |
+|        `60` | 3:1                   |
+
+But there are more factors to consider than WCAG 2 that make the Lc Contrast number tricky to use directly. For simplicity, you can use `"bronze"` (roughly equivalent to AA compliance in WCAG 2) or `"silver"` (roughly equivalent to AAA or more) as a shorthand that do more calculations for you.
+
+```ts
+{
+  checks: [
+    {
+      tokens: { /* … */ },
+      apca: 'silver'; // 'bronze' | 'silver' | 'silver-nonbody' | number | false
+    },
+  ],
+}
+```
+
+| Setting            | Description                                                                                                     |
+| :----------------- | :-------------------------------------------------------------------------------------------------------------- |
+| `"bronze"`         | Enforce [Bronze](https://www.myndex.com/APCA/#Silver)-level conformance (loosely-equivalent to `AA` in WCAG 2). |
+| `"silver"`         | Enforce [Silver](https://www.myndex.com/APCA/#Silver)-level conformance.                                        |
+| `"silver-nonbody"` | Silver-level compliance for non-body text (less strict).                                                        |
+| `"gold"`           | (not supported)                                                                                                 |
+| `number`           | ⚠️ Advanced users: specify Lc Contrast.                                                                         |
+| `false`            | Disable APCA.                                                                                                   |
 
 ::: warning
 
@@ -103,54 +136,24 @@ APCA is still a draft, and not part of WCAG 3. But APCA _is_ [well-researched](h
 
 :::
 
-The [APCA contrast algorithm](https://www.myndex.com/APCA/) is still in beta, but is a likely candidate for the upcoming WCAG 3 contrast algorithm. APCA uses the [latest research in color science](https://git.apcacontrast.com/documentation/WhyAPCA) and implements more perceptual contrast ratios that yield more accurate results. But it can be tricky to understand.
+##### Bronze vs Silver vs Lc Contrast
 
-| Setting         | Description                                                                      |
-| :-------------- | :------------------------------------------------------------------------------- |
-| `'bronze'`      | Enforce [Bronze](https://www.myndex.com/APCA/#Bronze)-level conformance.         |
-| `'bronze-body'` | Enforce Bronze-level compliance for body text (must hit `15 Lc` higher contrast) |
-| `number`        | ⚠️ Advanced users: specify Lc Contrast (which will differ based on typography).  |
-| `false`         | Disable APCA.                                                                    |
+Bronze and Silver both run the same perceptual color contrast formula, but Silver takes the extra step of weighting `typography` properties more that affect the final score. Here’s how they compare:
 
-##### Guide
+| Level              | Typography Token? | Result                                                                                                                                         |
+| :----------------- | :---------------: | :--------------------------------------------------------------------------------------------------------------------------------------------- |
+| `"bronze"`         |        🚫         | Enforces minimum color contrast                                                                                                                |
+| `"bronze"`         |        ✅         | Borrows simplistic WCAG 2 “large text” formula.                                                                                                |
+| `"silver"`         |        🚫         | (same as Bronze)                                                                                                                               |
+| `"silver"`         |        ✅         | Color calculation is the same, but advanced typography calculations are run that affects the final perceptual contrast score (harder to pass). |
+| `"silver-nonbody"` |        🚫         | (same as Bronze)                                                                                                                               |
+| `"silver-nonbody"` |        ✅         | Only use for non-body typefaces (headings and small footnotes). Makes typography calculations a little more lax.                               |
 
-The recommended setting is first starting with `'bronze'` enforcement (somewhat-equivalent to `'AA'` in WCAG 2):
+Specifying Lc Contrast numbers directly aren’t recommended, however, you may have read the [APCA guide](https://www.myndex.com/APCA/) and felt you need a different target Lc number than what Cobalt calculated (see note below). Even worst-case scenario, if you don’t meet Bronze or Silver, specifying _any_ number can still prevent future regressions (and you could always improve it over time).
 
-```js
-{
-  apca: 'bronze', // or 'bronze-body' for body text
-}
-```
-
-Then, after running a check, you’ll either **pass** or **fail.** If you fail, the error message will show you by _how much_ you were off (e.g. `Expected 75, received 70`). You then have 3 courses of action:
-
-1. **Increase contrast.** Simply adjust the color to a higher contrast, or adjust the font size / font weight.
-2. **Accept the current level.** If you feel like Cobalt calculated your contrast wrong (see [FAQs](#faq)), you can change `apca` to a passing Lc number (e.g. `apca: 59`).
-3. **Disable APCA for this check**. Perhaps this particular color combination, or typography stack, isn’t performing well under the APCA working draft. Simply set `apca: false` to skip this check.
-
-##### FAQ
-
-::: details Can I test APCA without typography?
-
-Yes! Just omit the `typography` token.
-
-:::
-
-::: details I’m failing contrast, but I can’t change my colors, font size, or font weight. What do I do?
+::: details Note on how APCA handles typography
 
 APCA’s typography tables are based off **Helvetica.** Most people aren’t using Helvetica as their brand font, so APCA allows some wiggle room in interpreting your _actual_ contrast numbers (see [Notes on Font Size & Weight](https://www.myndex.com/APCA/)). Read the guide and see if your _actual_ Lc contrast numbers are different than what Cobalt is reporting, and adjust by-hand (`apca: 59`).
-
-:::
-
-::: details What’s the difference between `'bronze'` and `'bronze-body'`?
-
-The [APCA Guide](https://www.myndex.com/APCA/) has stricter contrast requirements on body text because it’s your most frequently-occurring type style. However, to give designers control over the design itself, there’s no hard numbers on what constitutes a “body” type style. So you’ll have to tell Cobalt “this is my body text” with `'bronze-body'`.
-
-:::
-
-::: details Can I test with Silver or Gold?
-
-Not currently. The Silver guidelines are only half-defined, and Gold currently isn’t defined at all. If Bronze isn’t enough of a challenge for you, you can always specify manual Lc numbers (e.g. `apca: 90`)!
 
 :::
 
