--- a/docs/integrations/a11y.md
+++ b/docs/integrations/a11y.md
@@ -18,7 +18,7 @@ Then add to your `tokens.config.js` file:
 // tokens.config.js
 import a11y from "@cobalt-ui/lint-a11y";
 
-/** @type {import('@cobalt-ui/core').Config} */
+/** @type {import("@cobalt-ui/core").Config} */
 export default {
   tokens: "./tokens.json",
   outDir: "./tokens/",
@@ -36,7 +36,7 @@ The contrast check asserts your token combinations the latest WCAG 2.1 and [APCA
 ```js
 import a11y from "@cobalt-ui/lint-a11y";
 
-/** @type {import('@cobalt-ui/core').Config} */
+/** @type {import("@cobalt-ui/core").Config} */
 export default {
   tokens: "./tokens.json",
   outDir: "./tokens/",
@@ -88,7 +88,7 @@ The [WCAG 2 contrast formula](https://www.w3.org/WAI/WCAG21/Understanding/contra
   checks: [
     {
       tokens: { /* … */ },
-      wcag2: 'AA'; // "AAA" | "AA" | number | false
+      wcag2: "AA"; // "AAA" | "AA" | number | false
     },
   ],
 }
