Add core linter

--- a/docs/integrations/a11y.md
+++ b/docs/integrations/a11y.md
@@ -29,6 +29,10 @@ export default {
 };
 ```
 
+| Rule                            | Default | Description                                                                                                                                        |
+| :------------------------------ | :-----: | :------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [a11y/contrast](#a11y-contrast) | `"off"` | Run WCAG2 and APCA contrast checks on all of your tokens (you have to manually specify the pairs, but it will work on any tokens in `tokens.json`) |
+
 ## a11y/contrast
 
 The contrast check asserts your token combinations the latest WCAG 2.1 and [APCA](https://www.myndex.com/APCA/) (WCAG 3 proposal) formulae. Add an array of `checks` to test:
