--- a/www/src/pages/docs/components/color-picker.mdx
+++ b/www/src/pages/docs/components/color-picker.mdx
@@ -11,7 +11,7 @@ Terrazzo’s colorpicker is pretty special: it not only supports all of [CSS Col
 
 ## Demo
 
-<ColorPickerDemo client:load />
+<ColorPickerDemo client:only />
 
 ## Setup
 
