--- a/www/src/pages/docs/components/color-picker.mdx
+++ b/www/src/pages/docs/components/color-picker.mdx
@@ -3,7 +3,7 @@ title: React Color Picker
 layout: ../../../layouts/docs.astro
 ---
 
-import ColorPickerDemo from "../../../components/ColorPickerDemo";
+import ColorPickerDemo from "./demos/color-picker-basic.tsx";
 
 # React Color Picker
 
@@ -18,11 +18,11 @@ Terrazzo’s colorpicker is pretty special: it not only supports all of [CSS Col
 :::code-group
 
 ```sh npm
-npm i @terrazzo/react-color-picker
+npm i @terrazzo/react-color-picker @terrazzo/use-color
 ```
 
 ```sh pnpm
-pnpm i @terrazzo/react-color-picker
+pnpm i @terrazzo/react-color-picker @terrazzo/use-color
 ```
 
 :::
