--- a/www/src/pages/docs/components/color-picker.mdx
+++ b/www/src/pages/docs/components/color-picker.mdx
@@ -21,7 +21,7 @@ But not only that, in order to display colors in non-sRGB colorspaces, WebGL is 
 
 ## Demo
 
-<ColorPickerDemo client:only />
+<ColorPickerDemo client:load />
 
 ## Setup
 
