--- a/www/src/pages/docs/components/demo.mdx
+++ b/www/src/pages/docs/components/demo.mdx
@@ -3,6 +3,26 @@ title: Demo
 layout: ../../../layouts/docs.astro
 ---
 
+import DemoButton from "./demos/demo-button.tsx";
+
 # Demo
 
-You’re looking at it!
+A component for showing a component sandbox and displaying a copyable code snippet next to it.
+
+## Setup
+
+:::code-group
+
+```sh npm
+npm i @terrazzo/tiles
+```
+
+```sh pnpm
+pnpm i @terrazzo/tiles
+```
+
+:::
+
+## Demo
+
+<DemoButton client:load />
