docs: Version switcher, part 1 (#576)
* Update deps

* Move 2.0 alpha docs into subfolder for version switcher

* Fix package mismatch

* Fix lint

* Update layout paths

--- a/www/src/pages/docs/components/color-picker.mdx
+++ b/www/src/pages/docs/components/color-picker.mdx
@@ -90,10 +90,10 @@ sRGB, Display P3, and Rec 2020 (upcoming) gamuts in comparison. Each is signific
 
 </figure>
 
-By default, all color spaces are clamped to the sRGB gamut, which is the smallest but is available for all users on all devices. The expanded Display P3 gamut—common but not quite 100% of all users and devices—has to be manually-enabled in the expanded options. The Rec2020 gamut, the largest one, isn’t yet available on the web, but it’s included for futureproofing this colorpicker for the day when it does become available.
+By default, all color spaces are clamped to the sRGB gamut, which is the smallest but is available for all users on all devices. The expanded Display P3 gamut—common but not quite 100% of all users and devices—has to be manually-enabled in the expanded options. The Rec2020 gamut, the largest one, isn’t yet available on the web, but it’s included for futureproofing this color picker for the day when it does become available.
 
 <figure>
-  <img src="/assets/color picker-gamut.png" alt="Gamut toggles" width="300" />
+  <img src="/assets/colorpicker-gamut.png" alt="Gamut toggles" width="300" />
 </figure>
 
 Any gamuts that are toggled **off** won’t be reachable with the sliders. This ensures you’re not selecting colors outside the range of what’s intended.
